<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cancel_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTitle_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_name"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/cancel_Button"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/name_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle_TextView"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/name_EditText" />

    <TextView
        android:id="@+id/priceTitle_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_price"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/price_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle_TextView"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/price_EditText" />

    <TextView
        android:id="@+id/quantityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_quantity"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/quantity_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:hint="@string/hint_quantity"
        app:layout_constraintTop_toBottomOf="@+id/quantityTitle"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/quantity_EditText" />


</androidx.constraintlayout.widget.ConstraintLayout>