<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/priceTitle"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:text="Apple Shmapple Ice Pro Max 300" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_price"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/quantityTitle"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/priceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceTitle"
        tools:text="3 912 rub" />

    <TextView
        android:id="@+id/quantityTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/title_quantity"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/purchase"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/quantityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quantityTitle"
        tools:text="24 items" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/quantityTitle"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_purchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>